@startuml

package "org.example.biblio" {

    class Estudiante {
        - static int contadorEstudiantes
        - static final String CORREO_FORMAT
        - String nombre
        - String curso
        - int nia
        - String email
        - libro libro
        + Estudiante(String nombre, String curso, String email)
        + Estudiante(String nombre)
        + static int obtenerTotalEstudiantes()
        + static boolean validarCorreo(String correo)
        + String toString()
    }

    class editorial {
        - String nombre
        - String pais

        + editorial(String nombre, String pais)
        + String getNombre()
        + void setNombre(String nombre)
        + String getPais()
        + void setPais(String pais)
        + String toString()
    }

    class libro {
        - static int cantidadLibros
        - static int librosDisponibles
        - static final String CADENA_ID
        - static String id
        - static String titulo
        - static String autor
        - static boolean disponible
        - Estudiante estudiantePrestado
        - editorial editorial

        + libro(String cumbresBorrascosas, String emilyBronte, editorial editorial)
        - String generarID()
        + Prestamo prestar(Estudiante estudiante)
        + void devolver(Estudiante estudiante)
        + String toString()
    }

    class Prestamo {
        - libro libro
        - Estudiante estudiante
        - LocalDateTime fecha
        + Prestamo(libro libro, Estudiante estudiante)
        + LocalDateTime getFecha()
    }

    ' Relaciones
    Estudiante "1" -- "*" libro : >
    libro "1" -- "1" Estudiante : prestado a >
    libro "*" -- "1" editorial : pertenece a >
    Prestamo "1" o--> "1" libro
    Prestamo "1" o--> "1" Estudiante

}

@enduml
